# ai-speech-reply-chat

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ai_speech_reply_chat/: __init__.py  ai_agent.py  audio_util.py  logger_util.py  server.py
client_sample/: client_sample.py  pyproject.toml
scripts/: download_tacotron2_model.py  download_waveglow_model.py  initial_model_preparation.py
tests/: ai_agent_test.py  tacotron_waveglow_test.py  transformer_gpt2_test.py
