[tool.poetry]
name = "ai-speech-chat-client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ai_speech_chat_client"}]

[tool.poetry.dependencies]
python = "^3.8"
soundfile = "^0.11.0"
sounddevice = "^0.4.5"
requests = "^2.28.1"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
